fixing wrapping on tiny list right element

--- a/app/src/styles/components/_tiny-list.scss
+++ b/app/src/styles/components/_tiny-list.scss
@@ -33,6 +33,7 @@
 
 				> *:not(:last-child) {
 					margin-right: 1em;
+					white-space: nowrap;
 				}
 			}
 		}
